[package]
name = "rust-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.10.0"

rand = "0.8.5"

geoutils = "0.5.1"
isocountry = "0.3.2"

reqwest = { version = "0.12.7", features = ["json", "cookies"] }
reqwest_cookie_store = "0.8.0"

serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.128"

tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
axum = "0.7.5"

dotenv = "0.15.0"

[build-dependencies]
csv = "1.3.0"
isocountry = "0.3.2"
